--- a/src/App.css
+++ b/src/App.css
@@ -1,16 +1,10 @@
-*{
-    box-sizing: border-box;
-}
-
-body{
-    background-color: rgb(129, 232, 236);
-    color: rgb(31, 15, 15);
-    text-align: center;
-}
-
-.main-box{
+.card-container{
     display: flex;
+    gap:5px;
     justify-content: space-evenly;
     flex-wrap: wrap;
 }
 
+span{
+    background-color: yellow;
+}
