--- a/src/stylesheets/Cena.css
+++ b/src/stylesheets/Cena.css
@@ -1,28 +1,11 @@
-.rey{
-    color: white;
-    padding: 10px;
-    margin: 20px;
+.card{
+    border: 1px solid black;   
     text-align: center;
-    border-radius: 20px;    
+    border-radius: 10px;
+    max-width: 170px;
+    padding: 4px;
 }
 
 img{
     width: 100%;
-}
-
-.precio{
-    margin: auto;
-    text-align: center;
-}
-
-button{
-    padding: 6px;
-    background-color: rgb(34, 180, 58);
-    color: white;
-    border: none;
-    border-radius: 25px;
-}
-
-button:hover{
-    background-color: rgb(48, 236, 80);
 }
